--- a/views/league.html
+++ b/views/league.html
@@ -8,9 +8,10 @@
   <!-- Import dependencies from node-->
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <script type="module" src="../js/league.js"></script>
+  <link rel="stylesheet" href="./stylesheets/styles.css" />
 </head>
 
-<body style="background: black;">
+<body>
   <nav class="navbar navbar-dark" style="background-color: #1a1a1a">
     <a class="navbar-brand" href="./menu.html">
       <img src="../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
@@ -22,22 +23,22 @@
       <img id="logo" class="card-img-top" alt="league logo" style="max-width: 150px; max-height: 200px">
     </div>
     <br />
-    <h1 id="title" class="text-center" style="color:white">League</h1>
+    <h1 id="title" class="text-center">League</h1>
     <br />
-    <h3 id="subtitle" class="text-center" style="color:white">Subtitle</h3>
+    <h3 id="subtitle" class="text-center">Subtitle</h3>
     <br />
-    <h5 id="profiling" class="text-center" style="color:white">Profiling</h3>
-    <br />
-    <br />
-    <h3 style="color:white">Ranking</h3>
-    <div id="rankings">
-    </div>
-    <br />
-    <h3 style="color:white">Rounds</h3>
-    <div class="card" style="background-color: #2b2b2b">
-      <ul id="next_rounds" class="list-group list-group-flush" style="background-color: #ffffff">
-      </ul>
-    </div>
+    <h5 id="profiling" class="text-center">Profiling</h3>
+      <br />
+      <br />
+      <h3>Ranking</h3>
+      <div id="rankings">
+      </div>
+      <br />
+      <h3 style="color:white">Rounds</h3>
+      <div class="card">
+        <ul id="next_rounds" class="list-group list-group-flush" style="background-color: white">
+        </ul>
+      </div>
   </div>
   <br />
 </body>
