--- a/views/menu.html
+++ b/views/menu.html
@@ -9,28 +9,29 @@
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../icons/fa/css/font-awesome.min.css">
   <script type="module" src="../js/menu.js"></script>
+  <link rel="stylesheet" href="./stylesheets/styles.css"/>
 </head>
 
-<body style="background: #000000;">
+<body>
   <nav class="navbar navbar-dark" style="background-color: #1a1a1a">
     <a class="navbar-brand">
       <img src="../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
-        <buton id="next_fixtures" type="button" style="color: #ffffff" class="btn">Today fixtures</button></br>
+        <buton id="next_fixtures" type="button" style="color: white" class="btn">Today fixtures</button></br>
     </a>
     <form class="form-inline my-2 my-lg-0">
       <i id="lock" class="fa fa-lock" aria-hidden="true" style="color:lightsteelblue"></i>
-      <input id="write_key" disabled="disabled" class="form-control mr-sm-2" type="password" placeholder="Change the api key" style="background: #000000; border-color: #2b2b2b" aria-label="Search">
+      <input id="write_key" disabled="disabled" class="form-control mr-sm-2" type="password" placeholder="Change the api key" aria-label="Search">
       <small><a id="get_an_api_key" href="#">Get an api key</a></small>
     </form>
     <div>
-        <input id="searchbar" class="form-control mr-sm-2" type="search" placeholder="Search" style="background: #000000; border-color: #2b2b2b" aria-label="Search">
+        <input id="searchbar" class="form-control mr-sm-2 black-themed-input" type="search" placeholder="Search" aria-label="Search">
     </div>
   </nav>
   <br />
   <div class="container">
-    <h1 id="title" class="text-center" style="color: #ffffff">Latest news </h1>
-    <div class="card" style="background-color: #2b2b2b">
-      <ul id="latest_news" class="list-group list-group-flush" style="background-color: #ffffff">
+    <h1 id="title" class="text-center ">Latest news </h1>
+    <div class="card">
+      <ul id="latest_news" class="list-group list-group-flush">
       </ul>
     </div>
   </div>
