--- a/views/stylesheets/styles.css
+++ b/views/stylesheets/styles.css
@@ -11,6 +11,7 @@ input.form-control:focus {
   border-color: #2b2b2b;
 }
 
+/** Calendar input **/
 .calendar, .calendar:focus {
   background: #2b2b2b;
 }
