--- a/views/league.html
+++ b/views/league.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
       <img src="../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
     </a>
   </nav>
-  </br>
+  <br/>
   <div class="container">
     <div class="row justify-content-md-center">
       <img id="logo" class="card-img-top" alt="league logo" style="max-width: 150px; max-height: 200px">
@@ -27,7 +27,7 @@
     <br />
     <h3 id="subtitle" class="text-center">Subtitle</h3>
     <br />
-    <h5 id="profiling" class="text-center">Profiling</h3>
+    <h3 id="profiling" class="text-center">Profiling</h3>
       <br />
       <br />
       <h3>Ranking</h3>
