--- a/views/menu.html
+++ b/views/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-dark" style="background-color: #1a1a1a">
     <a class="navbar-brand">
       <img src="../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
-        <buton id="next_fixtures" type="button" style="color: white" class="btn">Today fixtures</button></br>
+      <span id="next_fixtures" style="color: white" class="btn">Today fixtures</span><br/>
     </a>
     <form class="form-inline my-2 my-lg-0">
       <i id="lock" class="fa fa-lock" aria-hidden="true" style="color:lightsteelblue"></i>
