--- a/views/player.html
+++ b/views/player.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,7 @@
   <script type="module" src="../js/player.js"></script>
 </head>
 
-<body style="background: #000000;">
+<body>
   <nav class="navbar navbar-dark" style="background-color: #1a1a1a">
     <a class="navbar-brand" href="./menu.html">
       <img src="../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
@@ -194,6 +194,7 @@
         </tbody>
       </table>
     </div>
+  </div>
 </body>
 
 </html>
