--- a/views/team.html
+++ b/views/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -23,13 +23,13 @@
     </div>
     <br />
     <div class="row justify-content-md-center">
-      <h2 id="clubName"class="d-flex justify-content-center"><b>Team name.</b></h2>
+      <h2 id="clubName" class="d-flex justify-content-center"><b>Team name.</b></h2>
     </div>
     <br />
     <div class="row justify-content-md-center">
-      <h3 id="profiling" class="d-flex justify-content-center"><b>Profiling.</b></h2>
+      <h3 id="profiling" class="d-flex justify-content-center"><b>Profiling.</b></h3>
     </div>
-    <br/>
+    <br />
     <p class="card-text" id="desc">Team description.</p>
     <div>
       <h3>Current squad</h3>
@@ -49,37 +49,41 @@
         </tbody>
       </table>
       <div>
-    <div>
-      <h3 >Latest fixtures</h3>
-      <table class="table table-bordered">
-        <thead class="thead-dark">
-          <tr>
-            <th>Date</th>
-            <th>Home team</th>
-            <th>Away team</th>
-            <th>Final score</th>
-            <th>League</th>
-          </tr>
-        </thead>
-        <tbody id="latestFixtures">
-        </tbody>
-      </table>
-      <div>
         <div>
-          <h3 >Next fixtures</h3>
+          <h3>Latest fixtures</h3>
           <table class="table table-bordered">
             <thead class="thead-dark">
               <tr>
                 <th>Date</th>
                 <th>Home team</th>
                 <th>Away team</th>
+                <th>Final score</th>
                 <th>League</th>
               </tr>
-            <tbody id="nextFixtures">
+            </thead>
+            <tbody id="latestFixtures">
             </tbody>
           </table>
         </div>
+        <div>
+          <div>
+            <h3>Next fixtures</h3>
+            <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Date</th>
+                  <th>Home team</th>
+                  <th>Away team</th>
+                  <th>League</th>
+                </tr>
+              <tbody id="nextFixtures">
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
 </body>
 
 </html>
