--- a/views/league.html
+++ b/views/league.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>UnFootball</title>
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <!-- Import dependencies from node-->
+  <!-- Import dependenc from node-->
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <script type="module" src="../js/league.js"></script>
   <link rel="stylesheet" href="./stylesheets/styles.css" />
+  <script type="module" src="../js/league.js"></script>
 </head>
 
 <body>
