First code clean up

--- a/views/fixtures.html
+++ b/views/fixtures.html
@@ -26,7 +26,7 @@
         <input type="date" id="datepicker" name="trip-start" min="2000-01-01" max="2021-10-10" class="calendar">
         <button id="previous" type="button" class="btn btn-success">Previous</button>
         <button id="next" type="button" class="btn btn-info">Next</button>
-        <button id="favs" type="button" class="btn btn-secondary">Only my favorites</button>
+        <button id="favs" type="button" class="btn btn-secondary">My favorites</button>
       </div>
       <div class="col-sm4">
         <form class="form-inline my-2 my-lg-0">
