--- a/views/league.html
+++ b/views/league.html
@@ -34,9 +34,9 @@
     <div id="rankings">
     </div>
     <br />
-    <h3 style="color:white">Rounds</h3>
+    <h3>Rounds</h3>
     <div class="card">
-      <ul id="next_rounds" class="list-group list-group-flush" style="background-color: white">
+      <ul id="next_rounds" class="list-group list-group-flush">
       </ul>
     </div>
   </div>
