--- a/views/stylesheets/styles.css
+++ b/views/stylesheets/styles.css
@@ -42,3 +42,10 @@ table.table-bordered thead.thead-dark th {
 div.card {
   background-color: #2b2b2b;
 }
+
+
+ul.list-group-flush li{
+  background-color: #1a1a1a;
+  border-color: #2b2b2b;
+  color: white;
+}
