Add logo to match + handle nothing available

--- a/views/match.html
+++ b/views/match.html
@@ -19,6 +19,7 @@
   </nav>
   <br />
   <div class="container">
+    <h1 id="logos" class="text-center">Logos</h1>
     <h1 id="title" class="text-center">Match</h1>
     <br />
     <h3>Events</h3>
