--- a/views/player.html
+++ b/views/player.html
@@ -20,6 +20,10 @@
   <div class="container">
     <br />
     <div class="row justify-content-md-center">
+    <img id="picture" alt="Player picture"></img>
+  </div>
+    <br />
+    <div class="row justify-content-md-center">
       <h2 id="playerName" class="d-flex justify-content-center"><b>Player name.</b></h2>
     </div>
     <br />
